<resources>
    <string name="app_name">MyCalc</string>
    <string name="action_settings">Settings</string>
    <string name="doubletoexit">Quit On Double Click</string>
    <string name="about">About</string>
    <string name="about_name">MyCalc</string>
    <string name="about_version">Version Number:Beta2.1.1</string>
    <string name="about_date">Release Time:2016/05/23</string>
    <string name="about_developer">Developer:Goweii</string>
    <string name="about_email">E-mail:goweii@163.com</string>
    <string name="about_button">BACK</string>
    <string name="action_about">About</string>
    <string name="action_quit">Quit</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_about">About</string>
    <string name="output_number_format_decimal">DECIMAL</string>
    <string name="output_number_format_percentage">PERCENTAGE</string>
    <string name="output_number_format_scientific">SCIENTIFIC</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_quit">Quit</string>
    <string name="history_clean">Clean</string>

    <!--提示信息-->
    <string name="error_undefined">ERROR:Undefined error</string>
    <string name="error_cannot_end_with">ERROR:Cannot end with that</string>
    <string name="error_cannot_start_with">ERROR:Cannot start with that</string>
    <string name="warning_default_add_at_end">WARNING:The default add brackets at the end</string>
    <string name="warning_default_add_at_start">WARNING:The default add brackets at the start</string>
    <string name="error_bracket_order">ERROR:Left and right bracket order error</string>
    <string name="error_multiple_point">ERROR:Number contains multiple point</string>
    <string name="error_connection_order">ERROR:Expression connection order error</string>
    <string name="error_illegal">ERROR:Illegal input</string>
    <string name="error_nan">ERROR:Invalid input</string>
    <string name="error_infinite">ERROR:Infinite</string>
    <string name="true_">TRUE</string>

</resources>
